# entropic-ecommerce

./: .gitignore  APP_FLOW_DOCUMENTATION.md  MODULARIZATION_COMPLETE.md  Makefile  README.md  docker-compose.frontend.yml  fixed_populate_embeddings.py  package.json  populate_embeddings.py  populate_real_embeddings.py  populate_real_embeddings_fixed.py  setup_supabase.py  simple_populate_embeddings.py  test_rag_system.sh
analytics/: pyproject.toml
analytics/dashboards/: streamlit_dashboard.py
backend/: RAG_ALIGNMENT_GUIDE.md  README_ARCHITECTURE.md  README_CLOUDINARY.md  __init__.py  auth.py  cloudinary_service.py  create_sample_data.py  database.py  fix_sku_constraint.py  main.py  main_simple.py  main_v2.py  main_working.py  migrate_db.py  migrate_products_table.py  models.py  populate_db.py  pyproject.toml  run_server.py  schemas.py  services.py  start_server.py
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  rag.py  rag_backup.py  rag_clean.py  rag_fixed.py
backend/app/core/: __init__.py  database.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  cloudinary_service.py  enhanced_rag_service.py  neon_vector_service.py  prompt_templates.py  rag_service.py  services.py  vector_search_service.py  vector_service.py
backend/app/utils/: __init__.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: BRAND-TICKER-SUMMARY.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/(App)/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(App)/brand-ticker-demo/: page.tsx
frontend/src/app/(App)/cart/: page.tsx
frontend/src/app/(Dashboard)/: layout.tsx
frontend/src/app/(Login)/: layout.tsx
frontend/src/app/brand-ticker-demo/: page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/deals/: page.tsx
frontend/src/app/new-arrivals/: page.tsx
frontend/src/components/: README-brand-ticker.md  VoiceAssistant-RAG.tsx  VoiceAssistant.tsx  VoiceAssistantImproved.tsx  VoiceAssistantUpdated.tsx  brand-ticker-examples.md  brand-ticker.tsx  footer.tsx  header.tsx  metric-card.tsx  not-found.tsx  product-card.tsx  product-filters.tsx
frontend/src/components/ui/: delete-confirmation-dialog.tsx  drag-drop-uploader.tsx  metric-card.tsx  product-skeleton.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useDashboardMetrics.ts
frontend/src/lib/: brand-carousel-config.ts  brand-ticker-tests.ts  brands.ts  cloudinary.ts  data.ts  store.ts
frontend/src/schemas/: product.ts
k8s/backend/: backend.yaml
k8s/database/: postgres.yaml  redis.yaml
k8s/frontend/: frontend.yaml
k8s/ingress/: ingress.yaml
k8s/namespace/: namespace.yaml
rag-system/: main.py  pyproject.toml
scripts/: cleanup.sh  deploy-prod.sh  deploy-rag.sh  deploy.sh  dev-start.sh  setup-dev.sh
src/app/: layout.tsx  page.tsx
src/app/cart/: page.tsx
src/app/contact/: page.tsx
src/app/new-arrivals/: page.tsx
src/components/: footer.tsx  header.tsx  product-card.tsx  product-filters.tsx
src/lib/: data.ts
(+21 files in other folders)
