[project]
name = "analytics"
version = "0.1.0"
description = "E-commerce analytics and insights system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "clickhouse-driver>=0.2.6",
    "psycopg2-binary>=2.9.6",
    "redis>=4.5.4",
    "kafka-python>=2.0.2",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
