[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Entropic e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.6",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "cloudinary>=1.36.0",
    "pillow>=10.0.0",
    "supabase>=2.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "pgvector>=0.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
